# python-package-size

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python_package_size/: main.py
